updated movie icon

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -54,7 +54,7 @@
 
         <ng-template carouselItem>
           <analytics-line-chart class="surface" [eventNames]="['pageView']" [data]="pageViewsOfPopularTitle$ | async">
-            <mat-icon svgIcon="visibility"></mat-icon>
+            <mat-icon svgIcon="movie"></mat-icon>
             <h5>Film Page Views</h5>
             <p class="mat-caption">See how many Buyers viewed your Film Page recently.</p>
           </analytics-line-chart>
