--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -101,7 +101,7 @@
 
   <article class="surface title_performance">
     <analytics-line-chart class="surface" [eventNames]="['pageView']" [data]="titleAnalytics$ | async">
-      <mat-icon svgIcon="visibility"></mat-icon>
+      <mat-icon svgIcon="movie"></mat-icon>
       <h5>Film Page Views</h5>
       <p class="mat-caption">See how many Buyers viewed your Film Page recently.</p>
     </analytics-line-chart>
