no title placeholder

--- a/apps/festival/festival/src/app/marketplace/organization/screening/screening.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/screening/screening.component.html
@@ -16,7 +16,7 @@
 </ng-container>
 
 <ng-template #empty>
-  <event-empty type="screening"></event-empty>
+  <event-empty></event-empty>
 </ng-template>
 
 <ng-template #loading>
