--- a/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
@@ -1,8 +1,26 @@
-<h2>Line-up</h2>
-<section fxLayout="row wrap" fxLayoutGap="24px grid">
-  <ng-container *ngFor="let title of titles$ | async; trackBy: trackById">
-    <movie-card [movie]="title" [link]="['/c/o/marketplace/title/', title.id]" size="poster" [attr.test-id]="'movie-card_' + title.id" [showWishlistButton]="!isAnonymous">
-      <event-request-screening *ngIf="!isAnonymous" [movieId]="title.id" iconOnly></event-request-screening>
-    </movie-card>
+<ng-container *ngIf="titles$ | async as titles else loading">
+  <ng-container *ngIf="titles.length; else empty">
+    <h2>Line-up</h2>
+    <section fxLayout="row wrap" fxLayoutGap="24px grid">
+      <ng-container *ngFor="let title of titles; trackBy: trackById">
+        <movie-card [movie]="title" [link]="['/c/o/marketplace/title/', title.id]" size="poster" [attr.test-id]="'movie-card_' + title.id" [showWishlistButton]="!isAnonymous">
+          <event-request-screening *ngIf="!isAnonymous" [movieId]="title.id" iconOnly></event-request-screening>
+        </movie-card>
+      </ng-container>
+    </section>
   </ng-container>
-</section>
+</ng-container>
+
+<ng-template #empty>
+  <section class="no-titles">
+    <h2>The Seller has not added the Titles into the digital catalogue yet.</h2>
+    <p>Come back later to check out the new Titles.</p>
+    <img asset="empty_line_up.svg" alt="No titles">
+  </section>
+</ng-template>
+
+<ng-template #loading>
+  <article test-id="screening-spinner" fxLayout="column" fxLayoutAlign="center center">
+    <logo-spinner></logo-spinner>
+  </article>
+</ng-template>
