--- a/apps/festival/festival/src/app/marketplace/organization/title/title.component.scss
+++ b/apps/festival/festival/src/app/marketplace/organization/title/title.component.scss
@@ -17,6 +17,22 @@ movie-card {
   width: 12.5%;
 }
 
+.no-titles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  p {
+    text-align: center;
+    margin-bottom: 24px;
+  }
+  
+  img {
+    width: 380px;
+  }
+}
+
 @include layout-bp(xs) {
   movie-card {
     width: 100%;
