removed test-id

--- a/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
@@ -20,7 +20,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <article test-id="screening-spinner" fxLayout="column" fxLayoutAlign="center center">
+  <article fxLayout="column" fxLayoutAlign="center center">
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
