--- a/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
+++ b/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
@@ -8,7 +8,7 @@
     <mat-icon svgIcon="account_circle"></mat-icon><span matLine>Users</span>
   </button>
 
-  <button mat-button routerLink="/c/o/dashboard/crm/organizations">
+  <button mat-button routerLink="/c/o/dashboard/crm/organizations" test-id="orgs">
     <mat-icon svgIcon="group"></mat-icon><span matLine>Organizations</span>
   </button>
 
