--- a/apps/crm/crm/src/app/crm/components/organization/create-organization/create.component.html
+++ b/apps/crm/crm/src/app/crm/components/organization/create-organization/create.component.html
@@ -1,10 +1,10 @@
-<section fxLayout="column" fxLayoutAlign="center center">
+<section fxLayout="column" fxLayoutAlign="center center" test-id="creation-form">
   <h1>Create Organization </h1>
   <!-- SUPER ADMIN -->
   <form [formGroup]="superAdminForm">
     <mat-form-field appearance="outline">
       <mat-label>Super Admin Email</mat-label>
-      <input matInput type="email" placeholder="Email" aria-label="email" formControlName="email" required />
+      <input matInput type="email" placeholder="Email" aria-label="email" formControlName="email" required test-id="super-admin-email"/>
       <mat-error *ngIf="superAdminForm.get('email').hasError('email') && !superAdminForm.get('email').hasError('required')">
         Please enter a <strong>valid</strong> email address.
       </mat-error>
@@ -14,13 +14,13 @@
     </mat-form-field>
   </form>
 
-  <static-select scope="appName" [control]="fromApp" [withoutValues]="['cms', 'crm', 'blockframes']" placeholder="From app">
+  <static-select scope="appName" [control]="fromApp" [withoutValues]="['cms', 'crm', 'blockframes']" placeholder="From app" test-id="from-app">
     <mat-label>From App</mat-label>
   </static-select>
 
   <crm-organization-form [form]="form" disableCropper></crm-organization-form>
 
-  <button test-id="create" mat-flat-button color="accent" [disabled]="creatingOrg" (click)="addOrganization()">
+  <button mat-flat-button color="accent" [disabled]="creatingOrg" (click)="addOrganization()" test-id="create">
     <span>Create</span>
     <mat-icon svgIcon="arrow_forward"></mat-icon>
   </button>
