--- a/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
@@ -4,7 +4,7 @@
 
   <article fxLayout="column" fxLayoutAlign="center center">
     <div fxLayout fxLayoutGap="16px">
-      <button mat-flat-button color="primary" (click)="createOrg()">
+      <button mat-flat-button color="primary" (click)="createOrg()" test-id="create-org">
         <span>Create org</span>
         <mat-icon svgIcon="add"></mat-icon>
       </button>
