--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -6,7 +6,7 @@
   <bf-form-table [columns]="columns" [form]="form" #formTable>
     <!-- Table -->
     <ng-template colRef="duration" let-duration>
-      {{ duration.from | date:'M/d/y' }} - {{ duration.to | date:'M/d/y' }}
+      {{ duration.from | date:'MM/dd/yyyy' }} - {{ duration.to | date:'MM/dd/yyyy' }}
     </ng-template>
 
     <ng-template colRef="territories" let-territories>
