--- a/libs/contract/src/lib/negotiation/form/negotiation-form.component.html
+++ b/libs/contract/src/lib/negotiation/form/negotiation-form.component.html
@@ -9,10 +9,10 @@
 <bf-form-table editOnly [form]="form.get('terms')" [columns]="termColumns" tablePosition="bottom" [active]="indexId" scrollAnchor="#data-scroll-to-view">
   <!-- Columns -->
   <ng-template colRef="duration.from" let-from>
-    {{ from | date:'M/d/y' }}
+    {{ from | date:'MM/dd/yyyy' }}
   </ng-template>
   <ng-template colRef="duration.to" let-to>
-    {{ to | date:'M/d/y' }}
+    {{ to | date:'MM/dd/yyyy' }}
   </ng-template>
   <ng-template colRef="territories" let-territories>
     <span class="group-label" (click)="openDetails(territories, 'territories')">
