Fix PR comments + finishing test

--- a/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
@@ -5,7 +5,7 @@
       <article fxLayout="row" fxLayoutAlign="space-between end">
         <organization-display [organization]="org">
           <mat-card-header>
-            <mat-card-title>{{ org.name }} </mat-card-title>
+            <mat-card-title test-id="header-name">{{ org.name }} </mat-card-title>
           </mat-card-header>
         </organization-display>
 
