sentry fix 069a05cc02244

--- a/libs/movie/src/lib/movie/components/title-features/title-features.component.html
+++ b/libs/movie/src/lib/movie/components/title-features/title-features.component.html
@@ -1,4 +1,4 @@
-<p class="mat-body-1" *ngIf="features.length" fxLayout>
+<p class="mat-body-1" *ngIf="features?.length" fxLayout>
   <ng-container *ngFor="let feature of features; let isLast = last">
     <span [matTooltip]="feature.tooltip" *ngIf="feature.view">
       {{ feature.view }}
