--- a/libs/invitation/src/lib/form/user/user.component.html
+++ b/libs/invitation/src/lib/form/user/user.component.html
@@ -17,6 +17,7 @@
       addOnBlur
       customInput
       (input)="onInputFilling($event)"
+      test-id="invite-guests"
     >
       <ng-template let-user>
         <div class="profile-item" fxLayout fxLayoutAlign="strt center" fxLayoutGap="8px">
