--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -53,7 +53,9 @@
     <div>
       <nav mat-tab-nav-bar>
         <ng-container *ngFor="let tab of (tabs$ |async)">
-          <a mat-tab-link [routerLink]="tab.path" [queryParams]="queryParams$ | async"  routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+          <a mat-tab-link [routerLink]="tab.path" [queryParams]="queryParams$ | async"
+          routerLinkActive #rla="routerLinkActive" [active]="rla.isActive" [attr.test-id]="tab.path"
+          >
             {{ tab.label }}
           </a>
         </ng-container>
