--- a/libs/invitation/src/lib/components/guest-item/guest-item.component.html
+++ b/libs/invitation/src/lib/components/guest-item/guest-item.component.html
@@ -9,7 +9,7 @@
       </ng-template>
       <mat-icon [svgIcon]="invitation.status | statusIcon" [color]="invitation.status | statusColor"></mat-icon>
     </div>
-    <span *ngIf="user.firstName" matLine>{{ user | displayUser | async }}</span>
+    <span *ngIf="user.firstName" matLine [attr.test-id]="'invitation_' + user.uid">{{ user | displayUser | async }}</span>
     <span *ngIf="!user.firstName" matLine>{{ user.email }}</span>
     <span matLine>
       <small class="mat-caption">
