--- a/libs/media/src/lib/video/viewer/viewer.component.html
+++ b/libs/media/src/lib/video/viewer/viewer.component.html
@@ -1,4 +1,4 @@
-<section fxLayout="column" fxLayoutAlign="center center" #container>
+<section fxLayout="column" fxLayoutAlign="center center" #container test-id="viewer">
 
   <div [id]="playerContainerId">
     <!-- everything in the div will be destroyed when the player is loaded -->
