--- a/libs/utils/src/lib/gdpr-cookie/cookie-banner/cookie-banner.component.html
+++ b/libs/utils/src/lib/gdpr-cookie/cookie-banner/cookie-banner.component.html
@@ -7,7 +7,7 @@
   </button>
   <img asset="cookie.png" alt="cookie">
 
-  <p>This website uses cookies. Some of them are essential to the service, some are just here to improve your exeperience.</p>
+  <p>This website uses cookies. Some of them are essential to the service, some are just here to improve your experience.</p>
   <form [formGroup]="form">
     <article>
       <label>
