updated terms and conditions

--- a/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
+++ b/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
@@ -329,6 +329,7 @@
         <mat-icon svgIcon="arrow_back"></mat-icon>
       </a>
       <h1>General Terms and Conditions of the Archipel Content Service</h1>
+      <p>Last edited March 1st, 2023</p>
     </header>
     <section fxLayout="row" fxLayoutAlign="center">
       <mat-card>
@@ -792,9 +793,12 @@
               (hereinafter
               the <strong>Transaction</strong>).
             </p>
-            <p>
-              The amount of the Commission is of 10% (ten percent) of the <strong>Transaction Price</strong>, which
-              equals to the amount offered by the Buyer and accepted to the Seller with respect to the acquisition of
+            <p>The amount of the Commission is of :</p>
+            <ul>
+              <li>if the rightholder is an intermediary (i.e. sales agent) : 10% (ten percent) of the <strong>Transaction Price</strong>,</li>
+              <li>if the righholder is a producer and subscribed after March 1st 2023 : 20 % (twenty percent) of the <strong>Transaction Price</strong>,</li>
+            </ul>
+            <p>This commission equals to the amount offered by the Buyer and accepted to the Seller with respect to the acquisition of
               the rights in and to a specific Work. Unless otherwise stipulated in the agreement entered into between
               the Seller and the Buyer, the Commission will be deemed included in the Transaction Price.
             </p>
@@ -836,7 +840,7 @@
             <p>
               <u>
                 It is specified that the Commission will be due by the Buyer each time he/she/it browsed the Film Page
-                corresponding to the Work subject to the Transaction, regardless of whether the negotiation and signing
+                corresponding to the Work subject to the Transaction, in a delay of 1 year after the last interaction of the buyer with the Film Page, regardless of whether the negotiation and signing
                 of the Transaction has taken place on the Platform or not.
               </u>
             </p>
