--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -58,7 +58,7 @@
 
 <ng-template #noSales>
   <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16">
-    <h1>No results found</h1>
+    <h1 test-id="empty">No results found</h1>
     <p>
       Oops! it looks like there's no result corresponding to your search criteria.
     </p>
