--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -35,13 +35,13 @@
       </ng-template>
       <ng-template colRef="id" label="actions" let-id sticky>
         <div fxLayout fxLayoutGap="16px" *ngIf="queryParams$ | async as queryParams">
-          <a mat-icon-button [routerLink]="[id,'map']" [queryParams]="queryParams">
+          <a mat-icon-button [routerLink]="[id,'map']" [queryParams]="queryParams" test-id="map">
             <mat-icon svgIcon="territories_avails" matTooltip="Map View"></mat-icon>
           </a>
-          <a mat-icon-button [routerLink]="[id,'calendar']" [queryParams]="queryParams">
+          <a mat-icon-button [routerLink]="[id,'calendar']" [queryParams]="queryParams" test-id="calendar">
             <mat-icon svgIcon="calendar_avails" matTooltip="Calendar View"></mat-icon>
           </a>
-          <a mat-icon-button [routerLink]="['select', id, 'manage']">
+          <a mat-icon-button [routerLink]="['select', id, 'manage']" test-id="manage">
             <mat-icon svgIcon="edit" matTooltip="Manage Avails"></mat-icon>
           </a>
         </div>
