--- a/apps/catalog/catalog/src/app/marketplace/marketplace.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/marketplace.component.html
@@ -44,7 +44,7 @@
       <mat-icon svgIcon="mini_logo_festival"></mat-icon>
       <span>Discover Events And Line-Ups</span>
     </a>
-    <a mat-icon-button routerLink="selection" matTooltip="My Selection">
+    <a mat-icon-button routerLink="selection" matTooltip="My Selection" test-id="bucket">
       <mat-icon svgIcon="shopping_basket"
         [matBadge]="contractCount$ | async"
         [matBadgeHidden]="(contractCount$ | async) === 0"
