--- a/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
@@ -7,8 +7,7 @@
     <p>
       Click on the territories you're interested in to add them to your Selection. For territories that are not
       licensed,
-      feel free to
-      <a [routerLink]="['/c/o/marketplace/organization', org.id, 'member']">contact {{ org.name }}</a>.
+      feel free to <u (click)="openIntercom()">contact Archipel Content</u>.
     </p>
   </ng-container>
 
