--- a/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
+++ b/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
@@ -329,7 +329,7 @@
         <mat-icon svgIcon="arrow_back"></mat-icon>
       </a>
       <h1>General Terms and Conditions of the Archipel Content Service</h1>
-      <p>Last edited March 1st, 2023</p>
+      <p>Last edited: the 1st of March 2023</p>
     </header>
     <section fxLayout="row" fxLayoutAlign="center">
       <mat-card>
@@ -339,7 +339,7 @@
             <p>
               The website, whose address is https://archipelcontent.com/ (hereinafter referred to as the "
               <strong>Platform</strong>”), was
-              created, developed and is operated by Casacde8, a French (corporate form) company registered under the
+              created, developed and is operated by Cascade 8, a French (corporate form) company registered under the
               number 847 756 764 and whose registered office is located at 4 rue de la République 69001 Lyon, France.
             </p>
             <p>
@@ -494,7 +494,7 @@
           <article>
             <h3>Article 6 - Creation of a "User Account" / Registration to the Service</h3>
             <p>
-              To register and access the Service, the User, whether a Seller or a Buyer, must :
+              To register and access the Service, the User, whether a Seller or a Buyer, must:
             </p>
             <ul>
               <li>create a "User Account" on the Platform;</li>
@@ -552,7 +552,7 @@
               to do so, to publish Film Pages on the Platform.
             </p>
             <p>
-              To do this, the Seller must :
+              To do this, the Seller must:
             </p>
             <ul>
               <li>connect to his User Account ;</li>
@@ -676,7 +676,7 @@
             <p>
               By using the Service, the User agrees to adopt in all circumstances a respectful attitude towards Archipel
               Content
-              and other Users. As such, the User guarantees not to use the Service to :
+              and other Users. As such, the User guarantees not to use the Service to:
             </p>
             <ul>
               <li>
@@ -793,10 +793,10 @@
               (hereinafter
               the <strong>Transaction</strong>).
             </p>
-            <p>The amount of the Commission is of :</p>
+            <p>The amount of the Commission is of:</p>
             <ul>
-              <li>if the rightholder is an intermediary (i.e. sales agent) : 10% (ten percent) of the <strong>Transaction Price</strong>,</li>
-              <li>if the righholder is a producer and subscribed after March 1st 2023 : 20 % (twenty percent) of the <strong>Transaction Price</strong>,</li>
+              <li>if the right holder is an intermediary (i.e. sales agent): 10% (ten percent) of the <strong>Transaction Price</strong>,</li>
+              <li>if the right holder is a producer and subscribed after March 1st 2023: 20 % (twenty percent) of the <strong>Transaction Price</strong>,</li>
             </ul>
             <p>This commission equals to the amount offered by the Buyer and accepted to the Seller with respect to the acquisition of
               the rights in and to a specific Work. Unless otherwise stipulated in the agreement entered into between
@@ -921,7 +921,7 @@
             <h4>14.2. At the initiative of Archipel Content</h4>
             <p>
               Without prejudice to any damages that Archipel Content may seek, Archipel Content reserves the right to
-              suspend access to a User and / or delete his User Account, without notice or compensation, in case of :
+              suspend access to a User and / or delete his User Account, without notice or compensation, in case of:
             </p>
             <ul>
               <li>non-compliance by the User of these T&Cs ;</li>
