--- a/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
@@ -3,13 +3,11 @@
 
   <h2>Available Territories</h2>
 
-  <ng-container *ngIf="org$ | async as org">
-    <p>
-      Click on the territories you're interested in to add them to your Selection. For territories that are not
-      licensed,
-      feel free to <u (click)="openIntercom()">contact Archipel Content</u>.
-    </p>
-  </ng-container>
+  <p>
+    Click on the territories you're interested in to add them to your Selection. For territories that are not
+    licensed,
+    feel free to <button (click)="openIntercom()">contact Archipel Content Team</button>.
+  </p>
 
   <ng-container *ngIf="availabilities$ | async as availabilities; else loading">
     <world-map>
