--- a/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.scss
@@ -10,10 +10,15 @@ form {
 
 p {
   line-height: 24px;
-}
-
-u {
-  cursor: pointer;
+  button{
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+    text-decoration: underline;
+  }
 }
 
 .spinner {
