--- a/apps/waterfall/waterfall/src/app/landing/landing.component.html
+++ b/apps/waterfall/waterfall/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <landing-shell-page>
-  <landing-header>
+  <landing-header test-id="landing-waterfall">
     <header id="header-to-scroll" class="max-width">
       <span class="mat-subheading-1">WELCOME TO BLOCKFRAMES</span>
     </header>
