--- a/libs/movie/src/lib/movie/form/filters/running-time/running-time.component.html
+++ b/libs/movie/src/lib/movie/form/filters/running-time/running-time.component.html
@@ -1,12 +1,10 @@
-<mat-radio-group [formControl]="form" fxLayout fxLayoutAlign="space-between">
-  <div fxLayout="column" fxLayoutGap="12px">
-    <mat-radio-button [value]="1" [attr.test-id]="filters[1].label">{{ filters[1].label }}</mat-radio-button>
-    <mat-radio-button [value]="2" [attr.test-id]="filters[2].label">{{ filters[2].label }}</mat-radio-button>
-    <mat-radio-button [value]="3" [attr.test-id]="filters[3].label">{{ filters[3].label }}</mat-radio-button>    
-  </div>
-  <div fxLayout="column" fxLayoutGap="12px">
-    <mat-radio-button [value]="4" [attr.test-id]="filters[4].label">{{ filters[4].label }}</mat-radio-button>
-    <mat-radio-button [value]="5" [attr.test-id]="filters[5].label">{{ filters[5].label }}</mat-radio-button>
-    <mat-radio-button [value]="6" [attr.test-id]="filters[6].label">{{ filters[6].label }}</mat-radio-button>
-  </div>
-</mat-radio-group>
+<form [formGroup]="form">
+  <mat-form-field appearance="outline">
+    <mat-label>Min Running Time</mat-label>
+    <input matInput formControlName="min" type="number" placeholder="in minutes" [value]="form.get('min').value" test-id="min-running-time">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Max Running Time</mat-label>
+    <input matInput formControlName="max" type="number" placeholder="in minutes" [value]="form.get('max').value" test-id="max-running-time">
+  </mat-form-field>
+</form>
