update home page

--- a/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
@@ -1,1 +1,12 @@
-<h1>Blockframes Dashboard</h1>
+
+<header>
+  <h1>Dashboard</h1>
+</header>
+
+<div>
+  <h2>You have no project yet</h2>
+  <a mat-flat-button color="primary" routerLink="../new-film" matTooltip="Add Film">
+    <mat-icon svgIcon="add"></mat-icon>
+    <span>Add Film</span>
+  </a>
+</div>
