--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -50,12 +50,12 @@
       <title-language-filter [form]="searchForm.languages"></title-language-filter>
     </ng-template>
 
-    <ng-template filter label="Release Year" [form]="searchForm.minReleaseYear">
-      <filter-release-year fxLayout="column" [form]="searchForm.minReleaseYear"></filter-release-year>
+    <ng-template filter label="Release Year" [form]="searchForm.releaseYear">
+      <filter-min-max [form]="searchForm.releaseYear" [labels]="{min: 'From', max: 'To'}" [placeholder]="'YYYY'"></filter-min-max>
     </ng-template>
 
     <ng-template filter label="Running Time" [form]="searchForm.runningTime">
-      <filter-running-time [form]="searchForm.runningTime"></filter-running-time>
+      <filter-min-max [form]="searchForm.runningTime" [labels]="{min: 'Min Running Time', max: 'Max Running Time'}" [placeholder]="'in minutes'"></filter-min-max>
     </ng-template>
 
     <ng-template filter label="Festival Selection" [form]="searchForm.festivals">
