--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -1,4 +1,4 @@
-<list-page [isLoading]="isLoading" [items]="movies$ | async">
+﻿<list-page [isLoading]="isLoading" [items]="movies$ | async">
 
   <!-- App Bar Search -->
   <list-page-app-bar>
@@ -41,9 +41,16 @@
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories" [withoutValues]="['world']" test-id="country">
-        <mat-label>Type and select Country</mat-label>
-      </chips-autocomplete>
+      <mat-form-field appearance="outline" >
+        <mat-label>Select Territories</mat-label>
+        <mat-icon matPrefix svgIcon="world"></mat-icon>
+        <static-group
+          [formControl]="searchForm.get('originCountries')"
+          scope="territories"
+          displayAll="World"
+          placeholder="Specify territory to filter">
+        </static-group>
+      </mat-form-field>
     </ng-template>
 
     <ng-template filter label="Language & Version" [form]="searchForm.languages">
