--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -41,14 +41,15 @@
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <mat-form-field appearance="outline" >
+      <mat-form-field appearance="outline">
         <mat-label>Select Territories</mat-label>
         <mat-icon matPrefix svgIcon="world"></mat-icon>
         <static-group
           [formControl]="searchForm.get('originCountries')"
           scope="territories"
           displayAll="World"
-          placeholder="Specify territory to filter">
+          placeholder="Specify territory to filter"
+          test-id="origin-countries">
         </static-group>
       </mat-form-field>
     </ng-template>
