--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -40,9 +40,17 @@
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories" test-id="country">
-        <mat-label>Type and select Country</mat-label>
-      </chips-autocomplete>
+      <mat-form-field appearance="outline">
+        <mat-label>Select Territories</mat-label>
+        <mat-icon matPrefix svgIcon="world"></mat-icon>
+        <static-group
+          [formControl]="searchForm.get('originCountries')"
+          scope="territories"
+          displayAll="World"
+          placeholder="Specify territory to filter"
+          test-id="origin-countries">
+        </static-group>
+      </mat-form-field>
     </ng-template>
 
     <ng-template filter label="Language & Version" [form]="searchForm.languages">
