--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
@@ -1,3 +1,5 @@
+@import "@angular/flex-layout/mq";
+
 mat-form-field {
   width: 100%;
 }
@@ -35,4 +37,11 @@ list-page-description, pdf-export button {
 
 .refresh {
   flex-shrink: 0;
+}
+
+@include layout-bp(gt-xs) {
+  list-page-search form {
+    display: flex;
+    gap: 8px;
+  }
 }
