--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -17,10 +17,13 @@
   <list-page-search>
     <form [formGroup]="searchForm">
       <mat-form-field appearance="outline">
-        <mat-label>Search for titles, directors, keywords...</mat-label>
+        <mat-label>Search for titles, directors, keywords</mat-label>
         <mat-icon matPrefix svgIcon="search"></mat-icon>
         <input matInput type="text" formControlName="query" [value]="searchForm.get('query').value" />
       </mat-form-field>
+      <static-select [control]="searchForm.searchBy" multiple scope="searchableElements">
+        <mat-label>Search by...</mat-label>
+      </static-select>
     </form>
   </list-page-search>
 
