--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -19,9 +19,9 @@
       <mat-form-field appearance="outline">
         <mat-label>Search for titles, directors, keywords</mat-label>
         <mat-icon matPrefix svgIcon="search"></mat-icon>
-        <input matInput type="text" formControlName="query" [value]="searchForm.get('query').value" />
+        <input matInput type="text" formControlName="query" [value]="searchForm.get('query').value" test-id="search-input"/>
       </mat-form-field>
-      <static-select [control]="searchForm.searchBy" multiple scope="searchableElements">
+      <static-select [control]="searchForm.searchBy" multiple scope="searchableElements" test-id="search-by">
         <mat-label>Search by...</mat-label>
       </static-select>
     </form>
