--- a/libs/ui/src/lib/logo-spinner/logo-spinner.component.html
+++ b/libs/ui/src/lib/logo-spinner/logo-spinner.component.html
@@ -1,10 +1,13 @@
 <ng-container [ngSwitch]="app">
-  <canvas *ngSwitchCase="'festival'" riv="archipel-market-logo" width="100" height="100" test-id="festival-spinner">
-    <riv-animation name="loop_market" play></riv-animation>
-  </canvas>
-  <canvas *ngSwitchCase="'catalog'" riv="archipel-content-logo" width="100" height="100" test-id="catalog-spinner">
-    <riv-animation name="loop_content" play></riv-animation>
-  </canvas>
-  <mat-spinner *ngSwitchDefault></mat-spinner>
+  <!-- temporary rive fix
+    <canvas *ngSwitchCase="'festival'" riv="archipel-market-logo" width="100" height="100" test-id="festival-spinner">
+      <riv-animation name="loop_market" play></riv-animation>
+    </canvas>
+    <canvas *ngSwitchCase="'catalog'" riv="archipel-content-logo" width="100" height="100" test-id="catalog-spinner">
+      <riv-animation name="loop_content" play></riv-animation>
+    </canvas>
+    <mat-spinner *ngSwitchDefault></mat-spinner>
+  -->
+  loading
 </ng-container>
 
