--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -20,7 +20,7 @@
         <mat-icon matPrefix svgIcon="search"></mat-icon>
         <input test-id="search-input" matInput type="text" formControlName="query" [value]="searchForm.get('query').value">
       </mat-form-field>
-      <static-select [control]="searchForm.searchBy" multiple scope="searchableElements">
+      <static-select [control]="searchForm.searchBy" multiple scope="movieSearchableElements">
         <mat-label>Search by...</mat-label>
       </static-select>
     </form>
