"Restrict Search" instead of "Search by..."

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -21,7 +21,7 @@
         <input test-id="search-input" matInput type="text" formControlName="query" [value]="searchForm.get('query').value">
       </mat-form-field>
       <static-select [control]="searchForm.searchBy" multiple scope="movieSearchableElements">
-        <mat-label>Search by...</mat-label>
+        <mat-label>Restrict Search</mat-label>
       </static-select>
     </form>
   </list-page-search>
