--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -16,10 +16,13 @@
   <list-page-search>
     <form [formGroup]="searchForm">
       <mat-form-field appearance="outline">
-        <mat-label>Search for titles, directors, keywords...</mat-label>
+        <mat-label>Search for titles, directors, keywords</mat-label>
         <mat-icon matPrefix svgIcon="search"></mat-icon>
         <input test-id="search-input" matInput type="text" formControlName="query" [value]="searchForm.get('query').value">
       </mat-form-field>
+      <static-select [control]="searchForm.searchBy" multiple scope="movieSearchableElements">
+        <mat-label>Restrict Search</mat-label>
+      </static-select>
     </form>
   </list-page-search>
 
