WIP graph & table components

--- a/apps/waterfall/waterfall/src/app/dashboard/dashboard.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,14 @@
         <mat-icon matListIcon svgIcon="dashboard"></mat-icon>
         <span matLine><b>Dashboard</b></span>
       </a>
+      <a mat-list-item routerLink="graph" routerLinkActive="active">
+        <mat-icon matListIcon svgIcon="business"></mat-icon>
+        <span matLine><b>Graph</b></span>
+      </a>
+      <a mat-list-item routerLink="table" routerLinkActive="active">
+        <mat-icon matListIcon svgIcon="search_table"></mat-icon>
+        <span matLine><b>Table</b></span>
+      </a>
       <auth-sidenav fxHide.gt-xs></auth-sidenav>
     </mat-nav-list>
 
