--- a/apps/waterfall/waterfall/src/app/dashboard/dashboard.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/dashboard.component.html
@@ -13,6 +13,10 @@
         <mat-icon matListIcon svgIcon="search_table"></mat-icon>
         <span matLine><b>Table</b></span>
       </a>
+      <a mat-list-item routerLink="firestore-test" routerLinkActive="active">
+        <mat-icon matListIcon svgIcon="save"></mat-icon>
+        <span matLine><b>Firestore-test</b></span>
+      </a>
       <auth-sidenav fxHide.gt-xs></auth-sidenav>
     </mat-nav-list>
 
