--- a/libs/invitation/src/lib/form/user/user.component.html
+++ b/libs/invitation/src/lib/form/user/user.component.html
@@ -47,7 +47,7 @@
       <p class="mat-body-1" >
         Unfortunately, the current version of the application does not allow you to send more than {{ error.requiredLength }} invitations at once for now.
         <br/>
-        Sorry for for that, we're working on it! If you need help, feel free to contact us here.
+        Sorry for that, we're working on it! If you need help, feel free to contact us here.
         <br/>
         <b>You currently have {{ error.actualLength }}.</b>
       </p>
