--- a/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
@@ -3,10 +3,10 @@
   <h1>Dashboard</h1>
 </header>
 
-<div>
+<section>
   <h2>You have no project yet</h2>
-  <a mat-flat-button color="primary" routerLink="../new-film" matTooltip="Add Film">
+  <a mat-flat-button color="primary" routerLink="../title" matTooltip="Add Film">
     <mat-icon svgIcon="add"></mat-icon>
-    <span>Add Film</span>
+    <span>Add Title</span>
   </a>
-</div>
+</section>
