--- a/apps/waterfall/waterfall/src/app/dashboard/title/title.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/title.component.html
@@ -6,7 +6,7 @@
   <h1>Movie Tunnel</h1>
 </header>
 
-<div class="surface">
+<section class="surface">
   <h3>Main Information</h3>
   <div>
     <mat-form-field appearance="outline">
@@ -36,7 +36,7 @@
       <mat-label>Type and select Country</mat-label>
     </chips-autocomplete>
   </div>
-</div>
+</section>
 
 <div>
   <button mat-flat-button color="primary" matTooltip="Save Film">
