fixing contact link in avails calendar

--- a/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
@@ -5,8 +5,7 @@
   <ng-container *ngIf="org$ | async as org">
     <p>
       Select the time window you're interested in to add it to your Selection. For periods that are not licensed, feel
-      free to
-      <a [routerLink]="['/c/o/marketplace/organization', org.id, 'member']">contact {{ org.name }}</a>.
+      free to <button (click)="openIntercom()">contact {{appName}} Team</button>.
     </p>
 
   </ng-container>
