--- a/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.scss
@@ -45,3 +45,16 @@ section {
     }
   }
 }
+
+p {
+  line-height: 24px;
+  button{
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
